<resources>
    <string name="app_name">Sithub</string>


<string-array name="main_menu_items">
    <item>Watch List</item>
    <item>Search</item>
</string-array>

<string name="drawer_open">Open navigation drawer</string>
<string name="drawer_close">Close navigation drawer</string>
<string name="action_about">About/Credits</string>
<string name="app_not_available">Sorry, there\'s no web browser available</string>
<string name="title_item_list">Items</string>
<string name="title_item_detail">Item Detail</string>
<string name="title_activity_test_item_fragment_container">TestItemFragmentContainerActivity</string>
<string name="hello_world">Hello world!</string>
<string name="title_activity_test_item_container">TestItemContainerActivity</string>
<string name="action_settings">Settings</string>
<string name="txt_search_hint">Enter search terms&#8230;</string>
<string name="title_show_list">Show Information</string>
<string name="title_show_detail">Show Detail</string>
<string name="lbl_subscribe_list_empty">Your Watch List is currently empty</string>
<string name="btn_add">Add Show</string>

<string-array name="days">
    <item>Monday</item>
    <item>Tuesday</item>
    <item>Wednesday</item>
    <item>Thursday</item>
    <item>Friday</item>
    <item>Saturday</item>
    <item>Sunday</item>
</string-array>

<string name="show_name_placeholder">Show Name</string>
<string name="show_time_placeholder">Show Time</string>
<string name="box_art_placeholder">Box art</string>
<string name="results">Results:</string>
<string name="show_year_placeholder">Year</string>
<string name="first_aired_placeholder">First aired</string>
<string name="watch_list_button_placeholder">Add to Watch List</string>
<string name="heading_overview">Overview:</string>
<string name="overview_placeholder">Overview</string>
<string name="show_network_placeholder">Network</string>
<string name="search_button">Search</string>
<string name="show_country_placeholder">Country</string>
<string name="title_activity_splash">SplashActivity</string>
<string name="logo_description">My TV Tracker Logo</string>
<string name="splash_loading">Loading&#8230;</string>
<string name="preferences_file_key">com.bewareofraj.mytvtracker.preferences</string>
<string name="title_activity_about">About/Credits</string>
<string name="about_title">About/Credits</string>
<string name="author_label">Author: Raj Ramsaroop</string>
<string name="website">Website: <a href="http://www.bewareofraj.com">www.bewareofraj.com</a></string>
<string name="trakt_credits">This app is powered by <a href="http://www.trakt.tv">Trakt.tv</a> API.</string>
<string name="select_episode">Select episode:</string>
<string name="episode_title_placeholder">Episode: Title</string>
<string name="episode_image_placeholder">Episode Image</string>
<string name="episode_first_aired_placeholder">First aired</string>
<string name="title_activity_season_episode">SeasonEpisodeActivity</string>
<string name="trakt_client_id">593515478eb0daeb95a353befa53078706d1d85d19dfbbc6f5c6dd8e2ad0f1da</string>
<string name="show_ended">Show ended</string>
<string name="show_in_production">Show in production</string>
<string name="show_on_break">Currently on break</string>
<string name="show_cancelled">Show cancelled</string>

<string name="search_field_empty">Please enter something to search for&#8230;</string>
<string name="search_no_results">Sorry, no results found :(</string>
<string name="search_please_wait">Searching, please wait&#8230;</string>

<string name="watchlist_add">Add to Watch List</string>
<string name="watchlist_remove">Remove from Watch List</string>
<string name="watchlist_removed">Show removed from Watch List</string>
<string name="watchlist_added">Show added to Watch List</string>

<string name="show_retrieving">Retrieving information, please wait</string>
<string name="show_year_unknown">Unknown</string>
<string name="banner_ad_id">ca-app-pub-1747771231914335/3706326400</string>
<string name="activity_title_summary">Summary</string>

<string name="search_activity_title">Search</string>
<string name="search_result_desc_placeholder">Description</string>

</resources>