<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/imgPoster"
            android:layout_width="100dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/box_art_placeholder"
             />

        <TextView
            android:id="@+id/lblShowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imgPoster"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/imgPoster"
            android:text="@string/show_name_placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lblShowYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lblShowName"
            android:layout_below="@+id/lblShowName"
            android:text="@string/show_year_placeholder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lblShowTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lblShowYear"
            android:layout_below="@+id/lblShowYear"
            android:text="@string/show_time_placeholder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lblShowNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lblShowYear"
            android:layout_below="@+id/lblShowTime"
            android:text="@string/show_network_placeholder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lblShowCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lblShowYear"
            android:layout_below="@+id/lblShowNetwork"
            android:text="@string/show_country_placeholder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lblFirstAired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lblShowTime"
            android:layout_below="@+id/lblShowCountry"
            android:text="@string/first_aired_placeholder"
            android:layout_marginEnd="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/btnWatchList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imgPoster"
            android:layout_below="@+id/imgPoster"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/watch_list_button_placeholder" />

        <TextView
            android:id="@+id/lblEpisodeOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btnWatchList"
            android:layout_below="@+id/btnWatchList"
            android:layout_marginTop="14dp"
            android:text="@string/heading_overview"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lblOverviewBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lblEpisodeOverview"
            android:layout_below="@+id/lblEpisodeOverview"
            android:layout_marginEnd="10dp"
            android:text="@string/overview_placeholder"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_id">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</ScrollView>

