<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:layout_marginStart="10dp">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/imgSearchPoster"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/box_art_placeholder"
       />

    <TextView
        android:id="@+id/lblSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgSearchPoster"
        android:layout_toRightOf="@+id/imgSearchPoster"
        android:text="@string/show_name_placeholder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblSearchYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lblSearchTitle"
        android:layout_below="@+id/lblSearchTitle"
        android:text="@string/show_year_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lblSearchDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lblSearchYear"
        android:layout_below="@+id/lblSearchYear"
        android:text="@string/search_result_desc_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:ellipsize="end"
        android:singleLine="true" />

</RelativeLayout>