<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblSelectEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/select_episode"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spnEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblSelectEpisode"
            android:layout_below="@+id/lblSelectEpisode"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/lblEpisodeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spnEpisode"
            android:layout_below="@+id/spnEpisode"
            android:layout_marginTop="14dp"
            android:text="@string/episode_title_placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/imgEpisodeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblEpisodeTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/episode_image_placeholder"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/lblEpisodeFirstAired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblEpisodeTitle"
            android:layout_below="@+id/imgEpisodeImage"
            android:layout_marginTop="14dp"
            android:text="@string/episode_first_aired_placeholder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lblOverviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblEpisodeFirstAired"
            android:layout_below="@+id/lblEpisodeFirstAired"
            android:text="@string/heading_overview"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblEpisodeOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblOverviewTitle"
            android:layout_below="@+id/lblOverviewTitle"
            android:text="@string/overview_placeholder"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</ScrollView>