<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:layout_marginLeft="50dp">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/imgSearchPoster"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/box_art_placeholder"
       />

    <TextView
        android:id="@+id/lblSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgSearchPoster"
        android:layout_toRightOf="@+id/imgSearchPoster"
        android:text="@string/show_name_placeholder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/show_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblSearchTitle"
        android:layout_below="@+id/lblSearchTitle"
        android:text="@string/show_time_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>